<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@color/color_settingsfragment_background"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/customborder"
            android:orientation="vertical">

            <Button
                android:id="@+id/developerWebsiteButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/developerWebsiteText" />

            <Button
                android:id="@+id/privacyPolicyButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacyPolicyText" />

            <Button
                android:id="@+id/disclaimerButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disclaimer_text" />


        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/customborder"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feedback_title_text" />

            <EditText
                android:id="@+id/editFeedbackContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/enter_your_feedback_here_text"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/buttonSendFeedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onSendFeebackButton"
                android:text="@string/send_feedback_button_text" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/customborder"
            android:orientation="vertical">

            <TextView
                android:id="@+id/buildInfoTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/build_info_text" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
