<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:padding="10dp"
    android:background="@color/color_settingsfragment_background"

    tools:context="com.procrastech.cruisevolume.tabSettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/customborder"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textSpeedThrOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />

            <SeekBar
                android:id="@+id/seekSpeedThrOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:thumb="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/textVolThrOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />

            <SeekBar
                android:id="@+id/seekVolThrOne"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="15"
                android:progress="3"
                android:thumb="@mipmap/ic_launcher_round" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/customborder"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textSpeedThrTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />

            <SeekBar
                android:id="@+id/seekSpeedThrTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:thumb="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/textVolThrTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />

            <SeekBar
                android:id="@+id/seekVolThrTwo"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="15"
                android:progress="3"
                android:thumb="@mipmap/ic_launcher_round" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/customborder"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textThreshold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />

            <SeekBar
                android:id="@+id/seekThreshold"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="15"
                android:progress="2"
                android:thumb="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/textUpdateInterval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />

            <SeekBar
                android:id="@+id/seekUpdateInterval"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="15"
                android:progress="1"
                android:thumb="@mipmap/ic_launcher_round" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/customborder"
            android:orientation="vertical">

            <Switch
                android:id="@+id/switchSlowGainMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/incAdjSwitchText" />

            <Switch
                android:id="@+id/switchAccMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/accmode_switch_text" />

            <Switch
                android:id="@+id/startWithWaveSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/startwithwave_text" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.61"
            android:text="@string/disclaimerText"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp" />

        <ImageView
            android:id="@+id/rotatingLogoView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.61"
            android:contentDescription="@string/rotatinglogo_content_description"
            app:srcCompat="@drawable/rotatinglogo" />

    </LinearLayout>
</ScrollView>



